--- a/app/globals.css
+++ b/app/globals.css
@@ -31,7 +31,7 @@ button {
   --primary: #E84A25;
   --primary-light: #FFC107;
   --secondary: #0F513C;
-  --accent: #F4B625;
+  --accent: #f9f7f2;
   --background: #ffffff;
   --background-accent: #F9F7F2;
   --foreground: #333333;
